changing notebook theme in appmode

--- a/Calculator.ipynb
+++ b/Calculator.ipynb
@@ -24,6 +24,8 @@
     "from __future__ import division\n",
     "import ipywidgets as ipw\n",
     "\n",
+    "!jt -t chesterish\n",
+    "\n",
     "output = ipw.Text(placeholder=\"0\", layout=ipw.Layout(width=\"190px\"),  disabled=True)\n",
     "\n",
     "def on_click(btn):\n",
@@ -69,7 +71,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
