edit custom js file

--- a/Calculator.ipynb
+++ b/Calculator.ipynb
@@ -18,6 +18,7 @@
     "from __future__ import division\n",
     "import ipywidgets as ipw\n",
     "\n",
+    "# customizes the notebook theme\n",
     "!jt -t chesterish -T\n",
     " \n",
     "output = ipw.Text(placeholder=\"0\", layout=ipw.Layout(width=\"190px\"),  disabled=True)\n",
